# topgun

./: .env.example  .env.local  .env.production  .gitignore  CHANGELOG.md  Dockerfile.base  EFFICIENCY_REPORT.md  README.md  conda-from-history.yml  fix_topgun_types.py  mypy.ini  packages.txt  pyproject.toml  requirements.txt  verify_restructure.py  構造.txt
.github/: FUNDING.yml  release.yml
.github/workflows/: ci.yml
bot/sherrinford/: Dockerfile  main.py  requirements.txt
bot/sherrinford/tests/: test_strategy.py
bots/: __init__.py
bots/gmo_board_watcher/: Dockerfile  __init__.py  main.py  requirements.txt
bots/sherrinford/: Dockerfile  config.yml  main.py
bots/watson/: Dockerfile  config.yml  main.py  requirements.txt
config/: base.yml  development.env  development.yml  init.sql  production.yml  staging.yml
docker/: .dockerignore  base.Dockerfile  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docs/: advanced.rst  api_key_guide.md  architecture.md  conf.py  examples.rst  exchanges.rst  index.rst  reference.rst  setup.md
examples/datastore/: binance.py  bitflyer.py  bitget.py  bitmex.py  bybit.py  coincheck.py  gmocoin.py  hyperliquid.py  phemex.py
examples/helpers/: gmocoin.py
examples/order/: hyperliquid.py
requirements/: dev.txt  docs.txt  test.txt  typing.txt
scripts/: deploy.sh  install_all_deps.sh  lint  python-version  static-dependencies  test  typing
shared/: __init__.py  api_keys.py  cache.py  database.py  exceptions.py  logger.py  monitoring.py  notifier.py  redis_keys.py  redis_manager.py
tests/: conftest.py  test_auth.py  test_client.py  test_datastore.py  test_gmo_board_watcher.py  test_helpers.py  test_hyperliquid.py  test_logger.py  test_redis_keys.py  test_redis_manager.py  test_shared_modules.py  test_ws.py
topgun/: README.md  auth.py  client.py  pyproject.toml  request.py  requirements.txt  store.py  ws.py
topgun/_static_dependencies/marshmallow_dataclass/: __init__.py  mypy.py
topgun/_static_dependencies/toolz/: _version.py
topgun/_static_dependencies/typing_inspect/: __init__.py  typing_inspect.py
topgun/docs/: contributing.rst  user-guide.rst
topgun/examples/datastore/: bitbank.py  kucoin.py  okx.py
topgun/examples/helpers/: bitbank.py
topgun/examples/trading-bot/: bitflyer.py
topgun/helpers/: __init__.pyi  bitbank.py  gmocoin.py  hyperliquid.py
topgun/models/: bitbank.py  bitget.py  bitmex.py  bybit.py  gmocoin.py  hyperliquid.py  kucoin.py  okx.py  phemex.py
topgun/models/legacy/: gmocoin.py
topgun/requirements/: dev.txt  requirements.txt  test.txt  typing.txt
topgun/scripts/: static-dependencies  typing
topgun/tests/: test_auth.py  test_client.py  test_datastore.py  test_gmo_board_watcher.py  test_helpers.py  test_logger.py  test_redis_keys.py  test_redis_manager.py  test_request.py  test_shared_modules.py  test_store.py  test_ws.py
topgun/topgun/: __init__.py  __init__.pyi  __version__.py  auth.py  client.py  request.py  store.py  ws.py
topgun/topgun/_static_dependencies/: typing_extensions.py
topgun/topgun/_static_dependencies/ecdsa/: _version.py
topgun/topgun/helpers/: bitbank.pyi  gmocoin.py  hyperliquid.py
topgun/topgun/models/: binance.py  bitbank.py  bitflyer.py  bitget.py  bitget_v2.py  bitmex.py  bybit.py  coincheck.py  gmocoin.py  hyperliquid.py  kucoin.py  okx.py  phemex.py
topgun/topgun/models/legacy/: gmocoin.py
